--- a/BomilactERP.api/BomilactERP.api.csproj
+++ b/BomilactERP.api/BomilactERP.api.csproj
@@ -24,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="ClosedXML" Version="0.102.0" />
   </ItemGroup>
 
 </Project>
